--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         ports:
         - 9090:80
         environment:
-        - DATABASE_URL=mysql://root:123@db/tabby
+        - DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@db/${MARIADB_DATABASE}
         - PORT=80
         - DEBUG=False
         - DOCKERIZE_ARGS="-wait tcp://db:3306 -timeout 60s"
@@ -17,7 +17,7 @@ services:
         image: mariadb:10.7.1
         restart: always
         environment:
-            MARIADB_DATABASE: tabby
-            MARIADB_USER: user
-            MARIADB_PASSWORD: 123
-            MYSQL_ROOT_PASSWORD: 123
+            MARIADB_DATABASE: ${MARIADB_DATABASE}
+            MARIADB_USER: ${MARIADB_USER}
+            MARIADB_PASSWORD: ${MARIADB_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
