--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@db/${MARIADB_DATABASE}
         - PORT=80
         - DEBUG=False
-        - DOCKERIZE_ARGS="-wait tcp://db:3306 -timeout 60s"
+        - DOCKERIZE_ARGS=-wait tcp://db:3306 -timeout 60s
         # - APP_DIST_STORAGE="file:///app-dist"
 
     db:
